# rosbags-dataframe

./: CHANGES.rst  CONTRIBUTING.rst  README.rst  REUSE.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: README.rst  pull_request_template.md
.gitlab/issue_templates/: bug.md
.reuse/: dep5
docs/: conf.py  index.rst
docs/api/: rosbags.dataframe.rst  rosbags.rst
docs/topics/: dataframe.rst
src/rosbags/dataframe/: __init__.py  dataframe.py
tests/: __init__.py  test_dataframe.py
